feat: add ch01 1-16 打印任意长度的输入行的长度

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,5 @@ project(tcpl C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(tcpl main.c )
+add_executable(tcpl main.c)
+add_executable(tcpl_ch01_16 ch01/1-16.c)
