--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(tcpl main.c)
 add_executable(tcpl_ch01_16 ch01/1-16.c)
+add_executable(tcpl_ch01_17 ch01/1-17.c)
