--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ set(CMAKE_C_STANDARD 99)
 add_executable(tcpl main.c)
 add_executable(tcpl_ch01_16 ch01/1-16.c)
 add_executable(tcpl_ch01_17 ch01/1-17.c)
+add_executable(tcpl_ch01_18 ch01/1-18.c)
