feat: add ch01 1-19 字符串反转

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(tcpl main.c)
 add_executable(tcpl_ch01_16 ch01/1-16.c)
 add_executable(tcpl_ch01_17 ch01/1-17.c)
 add_executable(tcpl_ch01_18 ch01/1-18.c)
+add_executable(tcpl_ch01_19 ch01/1-19.c)
