--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_executable(tcpl_ch01_16 ch01/1-16.c)
 add_executable(tcpl_ch01_17 ch01/1-17.c)
 add_executable(tcpl_ch01_18 ch01/1-18.c)
 add_executable(tcpl_ch01_19 ch01/1-19.c)
+add_executable(tcpl_ch01_20 ch01/1-20.c)
