feat: add ch01 1-22 把输入多行数据折行

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(tcpl_ch01_18 ch01/1-18.c)
 add_executable(tcpl_ch01_19 ch01/1-19.c)
 add_executable(tcpl_ch01_20 ch01/1-20.c)
 add_executable(tcpl_ch01_21 ch01/1-21.c)
+add_executable(tcpl_ch01_22 ch01/1-22.c)
