--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,4 @@ add_executable(tcpl_ch01_19 ch01/1-19.c)
 add_executable(tcpl_ch01_20 ch01/1-20.c)
 add_executable(tcpl_ch01_21 ch01/1-21.c)
 add_executable(tcpl_ch01_22 ch01/1-22.c)
+add_executable(tcpl_ch01_23 ch01/1-23.c)
