feat: add ch02 p30 计算字符数组长度

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ add_executable(tcpl_ch01_22 ch01/1-22.c)
 add_executable(tcpl_ch01_23 ch01/1-23.c)
 
 add_executable(tcpl_ch02_1 ch02/2-1.c)
+add_executable(tcpl_ch02_p30 ch02/p30.c)
