--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(tcpl_ch02_1 ch02/2-1.c)
 add_executable(tcpl_ch02_p30 ch02/p30.c)
 add_executable(tcpl_ch02_3 ch02/2-3.c)
 add_executable(tcpl_ch02_8 ch02/2-8.c)
+add_executable(tcpl_ch02_9 ch02/2-9.c)
