feat: add ch02 2-10 大写字母转小写字母

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,4 @@ add_executable(tcpl_ch02_p30 ch02/p30.c)
 add_executable(tcpl_ch02_3 ch02/2-3.c)
 add_executable(tcpl_ch02_8 ch02/2-8.c)
 add_executable(tcpl_ch02_9 ch02/2-9.c)
+add_executable(tcpl_ch02_10 ch02/2-10.c)
