--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ add_executable(tcpl_ch02_3 ch02/2-3.c)
 add_executable(tcpl_ch02_8 ch02/2-8.c)
 add_executable(tcpl_ch02_9 ch02/2-9.c)
 add_executable(tcpl_ch02_10 ch02/2-10.c)
+add_executable(tcpl_ch03_p48 ch03/p48.c)
