--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,4 @@ add_executable(tcpl_ch02_10 ch02/2-10.c)
 add_executable(tcpl_ch03_p48 ch03/p48.c)
 
 add_executable(tcpl_ch03_2 ch03/3-2.c)
+add_executable(tcpl_ch03_4 ch03/3-4.c)
