feat: add ch04 p60 把字符串转换为相应的双精度浮点数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_executable(tcpl_ch03_4 ch03/3-4.c)
 add_executable(tcpl_ch03_5 ch03/3-5.c)
 
 add_executable(tcpl_ch04_p58 ch04/p58.c)
+add_executable(tcpl_ch04_p60 ch04/p60.c)
