feat: add ch04 4-3 逆波兰计算器增加取模运算

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,4 @@ add_executable(tcpl_ch04_p58 ch04/p58.c)
 add_executable(tcpl_ch04_p60 ch04/p60.c)
 add_executable(tcpl_ch04_2 ch04/4-2.c)
 add_executable(tcpl_ch04_p64 ch04/p64.c)
+add_executable(tcpl_ch04_3 ch04/4-3.c)
