--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,4 @@ add_executable(tcpl_ch04_p60 ch04/p60.c)
 add_executable(tcpl_ch04_2 ch04/4-2.c)
 add_executable(tcpl_ch04_p64 ch04/p64.c)
 add_executable(tcpl_ch04_3 ch04/4-3.c)
+add_executable(tcpl_ch04_4 ch04/4-4.c)
