feat: add ch04 p74 打印十进制数和快速排序

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_executable(tcpl_ch04_2 ch04/4-2.c)
 add_executable(tcpl_ch04_p64 ch04/p64.c)
 add_executable(tcpl_ch04_3 ch04/4-3.c)
 add_executable(tcpl_ch04_4 ch04/4-4.c)
+add_executable(tcpl_ch04_p74 ch04/p74.c)
