--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,3 +34,4 @@ add_executable(tcpl_ch04_4 ch04/4-4.c)
 add_executable(tcpl_ch04_p74 ch04/p74.c)
 add_executable(tcpl_ch04_12 ch04/4-12.c)
 add_executable(tcpl_ch04_13 ch04/4-13.c)
+add_executable(tcpl_ch04_14 ch04/4-14.c)
