feat: add ch05 5-9 指针代替数组下标方式

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,4 @@ add_executable(tcpl_ch05_p85 ch05/p85.c)
 add_executable(tcpl_ch05_3 ch05/5-3.c)
 add_executable(tcpl_ch05_4 ch05/5-4.c)
 add_executable(tcpl_ch05_p95 ch05/p95.c)
+add_executable(tcpl_ch05_9 ch05/5-9.c)
