--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,3 +41,4 @@ add_executable(tcpl_ch05_3 ch05/5-3.c)
 add_executable(tcpl_ch05_4 ch05/5-4.c)
 add_executable(tcpl_ch05_p95 ch05/p95.c)
 add_executable(tcpl_ch05_9 ch05/5-9.c)
+add_executable(tcpl_ch05_p99 ch05/p99.c)
